--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Adhocparam\\": "src"
+            "Adhoc\\": "src"
         }
     },
     "autoload-dev": {
