--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^5.6|^6"
+        "php": "^7",
+        "illuminate/support": ">=5.6"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
